# Systems

./: README.md  distributions
environment/: readme.txt
environment/code_blocks/: README.md
environment/git/: README.md  git_accounts_repositories.txt
environment/linux/: README.md
environment/linux/bash/: .bashrc  .bashrc_minimal  .bashrc_tiny  .vimrc  README.md
environment/oracle/: README.md
environment/visual_studio/: README.md  vb.visualstudio.vssettings
environment/windows/: README.md  create-drives.bat
os/linux/: linux-debugging-observation-tools-overview.url
os/linux/learn/: README.md  environment
os/linux/learn/ubuntu/: apt-get.md
os/windows/batch/: README.md  tutorial.url
scripts/ScriptsToBeProcessed/Shell/all/VPMN_Load_CR/: Loader_Script_Usage_Final.doc  Makefile.am  file  loadVPMNData (2).ctl  loadVPMNData.ctl  loadVPMNData.sh  time analysis for vpmn
scripts/ScriptsToBeProcessed/Shell/all/VPMN_Load_CR/TestData/: vpmn_loader_all_valid.data  vpmn_loader_non_valid.data  vpmn_loader_non_valid01.data
scripts/ScriptsToBeProcessed/Shell/all/VPMN_Load_CR/TestScripts/: VPMNLoader_setup.sh  VPMNLoader_verify.sh
scripts/ScriptsToBeProcessed/Shell/all/VPMN_Load_CR/Tests/: help
scripts/ScriptsToBeProcessed/Shell/all/VPMN_Load_CR/migration/: help  migration_outroamer_gprs_vpmn_rates_install.sh  outroamer_gprs_vpmn_rates_install.sql
scripts/perl/: README.md
spaces/: README.md
spaces/linux/: GitSetUp.txt  README.md  clone_master_repository.sh  errors  githelper.txt
spaces/windows/: README.md
tool_specific/code_block/: TestCodeBlock.cbp
(+1048 files in other folders)
