SUBDIRS = IdeaFileHandlers EndToEndReport PrecheckListLoaderScript 


bin_SCRIPTS = \
	ideaunbilledamount.sh \
	ideainroamerhighusagesummary.sh \
	addnetwork.sh \
	IdeaRaterStartup.sh \
	ROCInvalidSubscriberCleanup.sh \
	RestartNotification.sh \
	get_sms_output.sh \
	rangersms.sh \
	ideaRaterFilesSpliter.sh \
	ROCSparkCleanup.sh \
	CloseAlarmDetailsPreviousDate.sh \
	DateWiseAlert.sh \
	CloseAlarmDetails.sh \
	StatusWiseCount.sh \
	ideaperdaysummary.sh \
	ROCPreckeckBaseBuilder.sh \
	loadVPMNData.sh
pkgdata_DATA = \
	ideaunbilledamount.ctl \
	loadVPMNData.ctl
